[gd_scene load_steps=3 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://Button.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -29.0
margin_top = -30.0
margin_right = 1068.0
margin_bottom = 631.0
color = Color( 0, 0, 0, 1 )

[node name="Dado2" type="LineEdit" parent="."]
margin_left = 24.0
margin_top = 80.0
margin_right = 237.0
margin_bottom = 108.0
rect_pivot_offset = Vector2( 306, 119 )
text = "Insira um produto"

[node name="Dado3" type="LineEdit" parent="."]
margin_left = 24.0
margin_top = 123.0
margin_right = 238.0
margin_bottom = 154.0
rect_pivot_offset = Vector2( 306, 119 )
text = "Insira um produto"

[node name="Dado1" type="LineEdit" parent="."]
margin_left = 24.0
margin_top = 168.0
margin_right = 239.0
margin_bottom = 195.0
rect_pivot_offset = Vector2( 306, 119 )
text = "Insira um produto"

[node name="Dado4" type="LineEdit" parent="."]
margin_left = 24.0
margin_top = 208.0
margin_right = 239.0
margin_bottom = 235.0
rect_pivot_offset = Vector2( 306, 119 )
text = "Insira um produto"

[node name="Label" type="Label" parent="."]
margin_left = 651.0
margin_top = 12.0
margin_right = 1005.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( -325, 42 )
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 288.0
margin_top = 79.0
margin_right = 642.0
margin_bottom = 207.0
rect_pivot_offset = Vector2( -325, 42 )
valign = 1

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 15.0
margin_top = 17.0
margin_right = 209.0
margin_bottom = 72.0
text = "Lista de compras
Insira seus produtos abaixo:"

[node name="Button" type="Button" parent="."]
margin_left = 449.0
margin_top = 9.0
margin_right = 626.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( -555, -294 )
text = "EXEMPLO DE LISTA"
script = ExtResource( 2 )

[node name="Button2" type="Button" parent="."]
margin_left = 24.0
margin_top = 254.0
margin_right = 238.0
margin_bottom = 300.0
text = "GERAR LISTA"

[node name="Button3" type="Button" parent="."]
margin_left = 24.0
margin_top = 311.0
margin_right = 239.0
margin_bottom = 345.0
text = "EXCLUIR LISTA"
icon_align = 1

[connection signal="pressed" from="Button" to="Button" method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button2" to="Button2" method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button3" to="Button3" method="_on_Button3_pressed"]
